Fixed minor errors